[gd_scene load_steps=5 format=3 uid="uid://dun3wyia3wvfd"]

[ext_resource type="Texture2D" uid="uid://cw8n7roe4ykk8" path="res://art/Custom/omegabeam.png" id="1_frdxg"]
[ext_resource type="Script" path="res://gameObjects/player/playerWeapons/omegaBeam/omegaBeam.gd" id="1_tqr41"]
[ext_resource type="AudioStream" uid="uid://bvn4dmaf5m258" path="res://sfx/Space_Ambience_and_Sound_Pack/Custom/beam_Ready.wav" id="3_rqh11"]
[ext_resource type="AudioStream" uid="uid://b8ffqtldak1i8" path="res://sfx/Space_Ambience_and_Sound_Pack/Hyperdrive_And_Teleport/Hyperdrive_Sustain.wav" id="4_nqdr8"]

[node name="omegaBeam" type="Node2D"]
scale = Vector2(0.5, 0.5)
script = ExtResource("1_tqr41")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = -0.785398
texture = ExtResource("1_frdxg")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
autostart = true

[node name="SFX" type="Node" parent="."]

[node name="readySound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("3_rqh11")
bus = &"SFX"

[node name="shootSound" type="AudioStreamPlayer" parent="SFX"]
stream = ExtResource("4_nqdr8")
bus = &"SFX"

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
